--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,24 +2,19 @@
   "name": "@clickquery/core",
   "version": "0.1.0",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "bun run scripts/build.ts",
     "dev": "bun run --watch src/index.ts",
     "test": "bun test"
   },
   "dependencies": {
-    "@clickhouse/client": "^1.11.1"
+    "@clickhouse/client": "^1.11.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.19",
+    "@types/node": "^22.14.1",
     "typescript": "^5.3.3"
   }
-} 
+}
