--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
 services:
-  clickhouse-server:
-    image: clickhouse/clickhouse-server:24.3.6
-    container_name: clickhouse-server
+  clickhouse:
+    image: clickhouse/clickhouse-server:24.1
+    environment:
+      - CLICKHOUSE_DB=analytics
+      - CLICKHOUSE_USER=default
+      - CLICKHOUSE_PASSWORD=analytics
+      - CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT=1
+    ports:
+      - "8123:8123"   # HTTP API
+      - "9000:9000"   # Native Protocol
+      - "9009:9009"   # Interserver HTTP
     ulimits:
       nofile:
         soft: 262144
         hard: 262144
-    volumes:
-      - ./data:/var/lib/clickhouse
-      - ./logs:/var/log/clickhouse-server
-    network_mode: host
-    cap_add:
-      - SYS_NICE
-      - NET_ADMIN
-      - IPC_LOCK
-      - SYS_PTRACE
